LendInvestApplicationTask/force-app/main/default/objects/Account/fields/Customer_Classification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Classification__c</fullName>
    <description>● GOLD = Total Customer Spend of £50,000 and above,
● SILVER = Total Customer Spend of £25,000 and above,
● BRONZE = Total Customer Spend of £10,000 and above,
● &lt;blank&gt; = Total Customer Spend is less than £10,000.</description>
    <formula>IF( Total_Customer_Spend__c &gt;= 50000, &quot;GOLD&quot;,
IF(Total_Customer_Spend__c &gt;= 25000 &amp;&amp; Total_Customer_Spend__c &lt;= 10000 ,&quot;SILVER&quot;, 
IF(Total_Customer_Spend__c &gt;= 10000 &amp;&amp; Total_Customer_Spend__c &lt;= 25000 ,&quot;BRONZE&quot;, 
&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Classification</label>
    <type>Text</type>
</CustomField>