LendInvestApplicationTask/force-app/main/default/objects/Account/fields/Gold_Alert_SMS_Sent__c.field-meta.xml
<CustomField>
    <fullName>Gold_Alert_SMS_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when Account has reached Gold Status</description>
    <label>Gold Alert SMS Sent</label>
    <type>Checkbox</type>
</CustomField>